# mor_dgtd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: MFEMHandler.cpp  MFEMHandler.h  ModelOrderReduction.cpp  POD_Basis.cpp  POD_Basis.h
src/driver/: driver.cpp  driver.h
src/launcher/: ConfigParser.cpp  ConfigParser.h  launcher.cpp
src/mor/: MFEMHandler.cpp  MFEMHandler.h  ModelOrderReduction.cpp  ModelOrderReduction.h  POD_Basis.cpp
test/: CMakeLists.txt  test.json  test_json_parser.cpp  test_mor.cpp
testData/: 2D_TFSF_MOR.json
